--- a/IDEA_KARPINSKI/package.json
+++ b/IDEA_KARPINSKI/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/estilo.scss css/styles.css",
+    "build-css": "node-sass --include-path scss scss/estilo.scss css/estilo.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
+
   },
   "author": "",
   "license": "ISC",
